# termin-modules

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
cmake/: TerminModule.cmake
docs/: callbacks.md  descriptors.md  index.md  lifecycle.md  python-api.md
examples/basic/: main.cpp
examples/basic/project/cpp_demo/: cpp_demo.module  module.cpp
examples/basic/project/python_demo/: python_demo.pymodule
include/termin_modules/: module_backend.hpp  module_cpp_backend.hpp  module_descriptor_parser.hpp  module_integration.hpp  module_python_backend.hpp  module_runtime.hpp  module_types.hpp
python/bindings/: termin_modules_module.cpp
python/termin_modules/: __init__.py
src/: module_cpp_backend.cpp  module_descriptor_parser.cpp  module_python_backend.cpp  module_runtime.cpp
